29539 fixes for search icon on safari

--- a/wp-content/themes/EquityX/scss/partials/_search.scss
+++ b/wp-content/themes/EquityX/scss/partials/_search.scss
@@ -7,13 +7,15 @@
 		padding: 5px 11px;
 		font-size: $fontSize-large;
 		color: $stone;
+		cursor: pointer;
 		transition: color .3s;
 		&:hover {
 			color: $blue;
 		}
 	}
 }
-body.blog {
+body.blog,
+body.search {
 	.searchTrigger {
 		display: block;
 		@include breakpoint(medium) {
@@ -101,7 +103,7 @@ body.blog {
 	position: absolute;
 	top: 50%;
 	left: 15px;
-	min-width: auto;
+	min-width: 40px;
 	height: 40px;
 	margin-top: -2px;
 	padding: 0 10px;
